fixed small bug with collapsable form

--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ th {
     width: 10px !important;
 }
 
+#readLabel {
+    width: 250px;
+}
+
 #bookForm input {
     padding: 5px;
     width: 300px;
